# base_xx

./: Cargo.toml  README.md
src/: byte_vec.rs  encoded_string.rs  encoder.rs  encoding.rs  lib.rs
src/algorithm/: base36.rs  base58.rs  base64.rs  hex.rs  mod.rs  uuencode.rs
src/serialise/: byte_vec.rs  encoded_string.rs  mod.rs  serialise_error.rs
src/serialise/algorithm/: base36.rs  base58.rs
