[package]
name = "base_xx"
version = "0.6.1"
edition = "2024"
description = "Base X encoding"
license = "MIT"
hompage = "https://github.com/beamvex/base_xx"
authors = ["Robert Forster <robert.forster@beamvex.com>"]
repository = "https://github.com/beamvex/base_xx"
documentation = "https://docs.rs/base_xx"

[lib]
test = true

[dependencies]
slogger = "0.1.1"
chrono = "0.4.34"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
allow-expect-in-tests = "allow"
panic = "deny"
